# PDF-Toolkit-CLI

./: Cargo.toml  README.md
.github/workflows/: ci.yml
pdfx/: Cargo.toml
pdfx-lib/: Cargo.toml
pdfx-lib/src/: crypto.rs  lib.rs  metadata.rs
pdfx-lib/tests/: cli_meta.rs
pdfx/examples/: live_run.rs
pdfx/src/: app.rs  cli.rs  main.rs
pdfx/src/commands/: crypto.rs  meta.rs  mod.rs
